--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node index.js",
-    "debug": "babel-node index.js --inspect-brk"
+    "debug": "babel-node index.js --inspect-brk",
+    "check-gradient": "babel-node CheckNetwork.js"        
   },
   "repository": {
     "type": "git",
